@@ -102,10 +102,11 @@
                 <img alt="Object image" src="#" />
             </div>
             <p id="template-objectDescription"></p>
+            <p id="template-objectDescriptionExtra"></p>
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" 
+            <button type="button" class="btn btn-primary" data-dismiss="modal" 
               data-translation="close">
                 Close
             </button>
@@ -142,7 +143,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                    <button type="button" class="btn btn-primary" data-dismiss="modal"
                       data-translation="close">
                         Close
                     </button>
