@@ -56,3 +56,4 @@
  - Upgrade of books 1, 3, 4 to the latest version (erratas)
  - Fixed bug with tinderbox on book4 / sect270
  - Fixed bug with meals: If the meal object has some effect, apply that effect when the object is eaten
+ - Objects now can have a short / long description
